--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
 	"license" : "MIT",
 	"keywords": ["framework", "dragon", "WordPress", "Plugin"],
 	"require" : {
-		"php": "^8.2",
+		"php": "^8.1",
         "red-scale-dragon/framework": "^2.0"
 	},
 	"require-dev" : {
@@ -28,6 +28,9 @@
 		],
 		"post-update-cmd" : [
 			"composer dump-autoload"
+		],
+		"post-autoload-dump": [
+			"Roots\\Acorn\\ComposerScripts::postAutoloadDump"
 		]
 	},
 	"config": {
