--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,17 @@
 {
 	"$schema": "https://getcomposer.org/schema.json",
-	"name" : "red-scale-dragon/framework",
+	"name" : "red-scale-dragon/app",
 	"description" : "The base application code for the Dragon Framework",
 	"type" : "project",
 	"license" : "MIT",
 	"keywords": ["framework", "dragon", "WordPress", "Plugin"],
 	"require" : {
 		"php": "^8.1",
-        "red-scale-dragon/framework": "^2.0"
+		"red-scale-dragon/framework": "^2.0"
 	},
 	"require-dev" : {
-		"yoast/phpunit-polyfills" : "^1.0"
+		"spatie/laravel-ignition": "^2.8",
+		"yoast/phpunit-polyfills": "^1.0"
 	},
 	"autoload": {
 	    "psr-4": {
@@ -39,5 +40,5 @@
 	    "sort-packages": true
 	},
 	"minimum-stability": "stable",
-    "prefer-stable": true
+	"prefer-stable": true
 }
