--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ job-references:
   install_dependencies: &install_dependencies
     name: "Install Dependencies"
     command: |
-      sudo apt-get update && sudo apt-get install subversion git
+      sudo apt-get update && sudo apt-get install subversion git wget
       sudo -E docker-php-ext-install mysqli
       sudo apt-get update && sudo apt-get install mysql-client
 
@@ -35,7 +35,8 @@ job-references:
       - run:
           name: "Run Tests"
           command: |
-            composer --dev global require "phpunit/phpunit=^10.5"
+            wget -O phpunit https://phar.phpunit.de/phpunit-10.phar
+            chmod +x phpunit
             composer update
             rm -rf $WP_TESTS_DIR $WP_CORE_DIR
             bash tests/bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
