--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ job-references:
           command: |
             wget -O phpunit https://phar.phpunit.de/phpunit-10.phar
             chmod +x phpunit
+            sudo mv phpunit /usr/bin
             composer update
             rm -rf $WP_TESTS_DIR $WP_CORE_DIR
             bash tests/bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
