--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,20 +27,24 @@ job-references:
   php_job: &php_job
     environment:
       - WP_TESTS_DIR: "/tmp/wordpress-tests-lib"
-      - WP_CORE_DIR: "/tmp/wordpress/"
+      - WP_CORE_DIR: "/home/circleci/project/"
     steps:
-      - checkout
       - run: *setup_environment
       - run: *install_dependencies
       - run:
-          name: "Run Tests"
+          name: "Prepare WordPress"
           command: |
             wget -O phpunit https://phar.phpunit.de/phpunit-10.phar
             chmod +x phpunit
             sudo mv phpunit /usr/bin
-            composer update
             rm -rf $WP_TESTS_DIR $WP_CORE_DIR
             bash tests/bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
+            cd $WP_CORE_DIR/wp-content/plugins/
+      - checkout
+      - run:
+          name: "Run Tests"
+          command: |
+            composer update
             phpunit
             WP_MULTISITE=1 phpunit
 
