--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ job-references:
             sudo mv phpunit /usr/bin
             rm -rf $WP_TESTS_DIR $WP_CORE_DIR
             bash tests/bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
-            cd $WP_CORE_DIR/wp-content/plugins/
+            cd {$WP_CORE_DIR}/wp-content/plugins/
       - checkout
       - run:
           name: "Run Tests"
