--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,26 +25,23 @@ job-references:
       sudo apt-get update && sudo apt-get install mysql-client
 
   php_job: &php_job
+    working_directory: ~/project/wp-content/plugins/dragonapp
     environment:
       - WP_TESTS_DIR: "/tmp/wordpress-tests-lib"
-      - WP_CORE_DIR: "/home/circleci/project/"
+      - WP_CORE_DIR: "/tmp/wordpress/"
     steps:
+      - checkout
       - run: *setup_environment
       - run: *install_dependencies
       - run:
-          name: "Prepare WordPress"
+          name: "Run Tests"
           command: |
             wget -O phpunit https://phar.phpunit.de/phpunit-10.phar
             chmod +x phpunit
             sudo mv phpunit /usr/bin
+            composer update
             rm -rf $WP_TESTS_DIR $WP_CORE_DIR
             bash tests/bin/install-wp-tests.sh wordpress_test root '' 127.0.0.1 latest
-            cd {$WP_CORE_DIR}/wp-content/plugins/
-      - checkout
-      - run:
-          name: "Run Tests"
-          command: |
-            composer update
             phpunit
             WP_MULTISITE=1 phpunit
 
