--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	},
 	"require-dev" : {
 		"spatie/laravel-ignition": "^2.8",
-		"yoast/phpunit-polyfills": "^3.0"
+		"yoast/phpunit-polyfills": "^3.0",
+		"phpunit/phpunit": "^9.6"
 	},
 	"autoload": {
 	    "psr-4": {
