--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
 	"config": {
 	    "optimize-autoloader": true,
 	    "preferred-install": "dist",
-	    "sort-packages": true
+	    "sort-packages": true,
+		"autoloader-suffix": ""
 	},
 	"minimum-stability": "stable",
 	"prefer-stable": true
